# CyberFlash

./: .gitignore  MASTER_FOUNDATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: copilot-instructions.md
config/: animations.json  app-config.yaml  community_repos.json  component_roadmap.json  components.json  debloat_lists.json  downloads.json  error_patterns.json  guacamole_crdroid_inventory.json  oneplus7pro_inventory.json  phases.json  theme.json
docs/: COMPONENT_AUDIT.md
guides/: 00_MASTER_INDEX.md  01_CORE_ARCHITECTURE.md  01_GLASSMORPHIC_DESIGN_SYSTEM.md  02_DEVOPS_MANUAL.md  02_MACOS_LINUX_FRAMEWORK_GUIDE.md  03_AI_NEURAL_CORE.md  03_DEVELOPMENT_WORKFLOW.md  04_AUTOMATION_LOGIC_SPEC.md  04_BUILD_DEPLOYMENT.md  05_CROSS_PLATFORM_GUIDELINES.md  05_TROUBLESHOOTING.md  06_AI_INTEGRATION_GEMINI.md  06_USER_MANUAL_BETA.md  07_FEATURE_ROADMAP_2026.md  07_GEMINI_PROMPTS.md  08_CORE_COMPONENTS.md  09_WIRING_AND_SAFETY_MASTER.md  10_PHASE_MASTER_PLAN.md  FLASHWIZARD_OP7PRO_GUIDE.md  oneplus-7pro-crdroid-guide.md
scripts/: install_udev_rules.sh  run-dev.sh  test_device.sh  troubleshoot_adb.sh
specs/: components.json  phases.json  theme.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  history.db  tauri.conf.json
src-tauri/config/: user_settings.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: adb.rs  app_manager.rs  automation.rs  battery_ai.rs  brick_prevention.rs  cloud_sync.rs  config.rs  config_gen.rs  context_bot.rs  fastboot.rs  file_parser.rs  flash_as_code.rs  flash_recovery.rs  gemini.rs  hardware.rs  history.rs  http_client.rs  image_patcher.rs  log_parser.rs  mod.rs  module_manager.rs  multi_device.rs  network_opt.rs  nlp_cli.rs  ocr.rs  os_perm.rs  predictive_core.rs  prop_editor.rs  prop_reader.rs  recovery_script.rs  rescue.rs  rom_recommender.rs  rom_tools.rs  scheduler.rs  scrcpy_manager.rs  security.rs  sentiment.rs  shell_stream.rs  social.rs  sys_driver.rs  (+5 more)
src-tauri/src/commands/devices/: mod.rs  oneplus.rs
src-tauri/workflows/: full_wipe_flash.json  pixel_debloat.json
src/assets/: animations.css
src/components/features/: AIAssistantOverlay.vue  AIChatInterface.vue  AIGuardian.vue  AppUpdater.vue  BackupManager.vue  (+26 more)
src/composables/: useTheme.ts  useVision.ts
src/services/: aiService.ts
src/stores/: ai.ts  device.ts  dynamicIsland.ts  flash.ts  history.ts  notifications.ts  settings.ts  system.ts
src/views/: DashboardView.vue  FlashView.vue  HardwareView.vue  LabView.vue  SettingsView.vue  SocialView.vue  ToolsView.vue
tools/: device_manager.py  payload_helper.py  project_automator.py
(+114 files in other folders)
