[package]
name = "cyberflash-v2"
version = "0.1.0"
description = "CyberFlash V2 - Advanced Android Flashing Tool"
authors = ["SoulMaster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cyberflash_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = "0.6"
md5 = "0.7"
sha2 = "0.10"
regex = "1.10"
rand = "0.8"
lazy_static = "1.4"
uuid = { version = "1.4", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
dialoguer = "0.12.0"
inquire = "0.9.1"
tokio = { version = "1.48.0", features = ["full", "io-uring", "mio", "taskdump", "test-util", "tracing", "windows-sys"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.42", features = ["unstable-locales", "__internal_bench"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.29"
env_logger = "0.11.8"
arbitrary = "1.4.2"
libc = "0.2.178"
pure-rust-locales = "0.8.2"
rkyv = "0.8.12"
base64 = "0.22.1"
futures = "0.3.31"

